# UmbrellaProject

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
cmake/: CompilerOptions.cmake  Dependencies.cmake  PGO.cmake  Sanitizers.cmake  UserConfigs.cmake
src/: BenchmarkTestMain.cpp  BenchmarkTestMain2.cpp  MainMain.cpp  input.txt  main.cpp
src/DSA/Array/Questions/: FindMajorityMain.cpp  FindMaxMain.cpp  FindSecondLargestMain.cpp  FindThirdLargestMain.cpp  MergeArrayMain.cpp
src/DSA/Array/Unsorted/: GenerateSubArraysMain.cpp  RemoveDuplicatesMain.cpp  RotateArrayMain.cpp
src/DSA/CustomDS/: Helper.h  readme.md
src/DSA/CustomDS/MyString/: CMakeLists.txt  MyString.h  StringExecutable.cpp  Test.cpp  readme.md
src/DSA/CustomDS/MyVector/: CMakeLists.txt  MyVector.h  VectorExecutable.cpp
src/DSA/Questions/Array/: FindMissingMain.cpp
src/DSA/helper/MyVector/: Benchmarking.h  CMakeLists.txt  MyVector.h  VectorExecutable.cpp
src/Data Structures/Algorithms/: BoyerMooreMain.cpp
src/Data Structures/Array/Reverse/: JustTestMain.cpp  ReverseBuiltInMain.cpp  ReverseWithExtraArrayMain.cpp  ReverseWithLoopMain.cpp  ReverseWithStackMain.cpp
src/Data Structures/Array/Sorted/: InsertSortedMain.cpp
src/Data Structures/Array/Unsorted/: DeleteAndShiftMain.cpp
src/Data Structures/Questions/Array/: FindMajorityMain.cpp  LargestSumContiguousSubArrayMain.cpp  LeadersInArrayMain.cpp  MergeArrayMain.cpp  PairWithGivenSumMain.cpp
src/ImportantConcepts/: AnotherMove.cpp  CMakeLists.txt  CopyMovePerfectForwardConstr.cpp  MoveSementics.cpp  PerfectForwarding.cpp  VariantAndVisit.cpp
src/Projects/Cpp/: readme.md
src/Projects/Cpp/Interface/: CircleDrawable.h  IDrawable.h  main.cpp
src/Projects/Cpp/InterfaceBasic/: CMakeLists.txt  RectangleDrawable.h  main.cpp  readme.md
src/Projects/Cpp/InterfaceComplex/: IDrawable.h
src/Projects/ETG/: CMakeLists.txt  DebugTexts.h  GameManager.h  Globals.h  InputManager.h  main.cpp
src/Projects/ETG/Animation/: Animation.cpp  Animation.h  AnimationManager.h
src/Projects/ETG/Characters/: Hero.cpp  Hero.h
src/Projects/ETG/Managers/: DebugTexts.h  GameManager.cpp  GameManager.h  Globals.cpp  Globals.h  InputManager.h  StateEnums.h
src/Projects/ETG/UI/: UserInterface.cpp
src/Projects/Math/: readme.md
src/Projects/Math/DotProduct/FieldOfView/: CMakeLists.txt  FieldView.cpp
src/Projects/Math/DotProduct/FieldOfViewExample/: CMakeLists.txt  main.cpp
src/Projects/Math/DotProduct/Fov/: CMakeLists.txt  Fov.cpp  readme.md
src/Projects/Math/DotProduct/Fov2/: CMakeLists.txt  FrontBehind.cpp  readme.md
src/Projects/Math/DotProduct/FrontBehind/: CMakeLists.txt  FrontBehind.cpp  readme.md  vcpkg.json
src/Projects/Math/DotProduct/FrontBehindExample/: CMakeLists.txt  FrontBehindMain.cpp
src/Projects/Math/DotProduct/MovementProjection/: CMakeLists.txt  MovementProjection.cpp  readme.md
src/Projects/Math/DotProduct/Slope/: Slope.cpp
src/Projects/Math/FourCorner/: CMakeLists.txt  DelegateMain.cpp
src/Projects/Math/HelperClass/: HelperCollection.h  MainTemplate.h  Math.h  Object.h  OtherHelper.h
src/Projects/Math/Trigonometry/RotationMatrix/: CMakeLists.txt  RotationMatrix.cpp
src/Projects/Math/Trigonometry/Shapes/: CMakeLists.txt  Shapes.cpp
src/Projects/Math/Vector/Concepts/Normal/ProGenVer1/: CMakeLists.txt  main.cpp
src/Projects/Math/Vector/Concepts/PillarClimb/: CMakeLists.txt  PillarClimb.cpp
src/Projects/Math/Vector/DotProduct/: readme.md
src/Projects/Math/Vector/DotProduct/Fov/: CMakeLists.txt  FOVVisualizer.h  Fov.cpp  readme.md
src/Projects/Math/Vector/DotProduct/FrontBehind/: FrontBehind.cpp
src/Projects/Math/Vector/DotProduct/LookAtTrigger/: CMakeLists.txt  LookAtTrigger.cpp
src/Projects/Math/Vector/DotProduct/MovementProjection/: MovementProjection.cpp
src/Projects/Math/Vector/DotProduct/SimpleDiffuseLight/: CMakeLists.txt  SimpleDiffuseLight.cpp  readme.md
src/Projects/Math/Vector/DotProduct/Slope/: CMakeLists.txt  Slope.cpp
src/Projects/Math/Vector/Interpolations/AllComparison/: CMakeLists.txt  allthreeComp.cpp  readme.md
src/Projects/Math/Vector/Interpolations/InverseLerp/: CMakeLists.txt  InverseLerp.cpp
src/Projects/Math/Vector/Interpolations/lerp/: CMakeLists.txt  lerp.cpp
src/Projects/Math/Vector/Interpolations/nlerp/: InverseLerp.cpp
src/Projects/Misc/: CMakeLists.txt  DelegateMain.cpp  readme.md
src/Projects/Misc/CollisionResolution/: CMakeLists.txt  CollisionResolutionMain.cpp  readme.md
src/Projects/Misc/Formation/FormationBasic /: Formation.cpp  Unit.h
src/Projects/Misc/Formation/FormationFull/: CMakeLists.txt  Formation.cpp  Unit.h
src/Projects/Misc/Formation/FormationFullTest/: Formation.cpp  Unit.h
src/Projects/Misc/FourCorner/: CMakeLists.txt
src/Projects/Misc/Interact/: CMakeLists.txt  PickupMain.cpp
src/Projects/Misc/Interaction/: CMakeLists.txt
src/Projects/Misc/ReflectionExample/: CMakeLists.txt
src/Projects/Misc/ReflectionExample/src/: ImGui.cpp  JustTest.cpp  PrintOverloadForMemberAndBase.cpp  VariableConsole.cpp
src/Projects/Misc/SFML-DearImGui/: main.cpp  vcpkg.json
src/Projects/Misc/stl/timer/: CMakeLists.txt  TimerComponent.cpp
src/Projects/Misc/timer/: TimerComponent.h  mainTimer.cpp
src/Projects/ReflectionExample/: CMakeLists.txt
src/Projects/ReflectionExample/src/: EnumToString.cpp  ReflectionEqualOverload.cpp
src/Projects/SFML-DearImGui/: CMakeLists.txt  main.cpp
